--- a/index.html
+++ b/index.html
@@ -1,1 +1,56 @@
-Test
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Welcome to Vecta Corp. – 24/7 365 turnkey vSolutions for your agile ebusiness</title>
+</head>
+<body>
+    <h1>Welcome to Vecto Corp</h1>
+    <hr>
+
+    <p> With innovative approaches and advanced methodologies, Vecta Corporation provides scalable business solutions to help 
+        companies achieve success through revenue increase, cost management, and user satisfaction.Our approach stems from the
+        three most important business growth aspects: helping companies reach prospects, assist in converting prospects to customers, 
+        and assist in retaining those customers. This is accomplished through our interactive solutions and expertise in providing a 
+        memorable and positive user experience.</p>
+    </p>
+
+    <p><h3>Our Solutions</h3> 
+        <h4> vProspect 2.0 </h4> 
+        Define and research your target audience, define your strategy to reach that audience and present a strong and memorable brand to that audience.
+        <h4> vConvert 2.0 </h4> 
+        Create a highly user-friendly and easy-to-navigate information architecture that will help your prospects interact with the company on a highly interactive level.
+        <h4>vRetain 1.0 </h4> Build on existing customer relationships to improve productivity and maximize customer loyalty, while growing 
+        revenues.
+
+        <h3>Client Testimonials</h3> 
+        <p>Throughout the years we have worked with Vecta Corporation, we have always been amazed at the level of dedication and professionalism that they have provided us and our WGDC products.
+        It is this commitment that has increased both our income and exposure exponentially.<br>
+
+        Ferris Finkelstein, 
+        Founder and CEO,
+        Dorknozzle </p>
+
+        <p>Incredible results from an incredible effort by the Vecta Corporation team! We are very pleased with the business benefits we
+        have rceived by working with them.<br>
+
+        Justin Case, CTO, IX Inc.</p>  
+    </p>
+
+        <hr> 
+    <p><h4>Contact Vecta Corporation</h4>
+        Vecta Corporation<br>
+        555 Technology Place<br>
+        San Diego, CA 92115<br>
+        Tel. (800) 555-5555<br>
+        <br>
+
+        <h4> Management Team </h4>
+        Agnes, Vice President, Accounting<br>
+        Damon, Director of Development<br>
+        Herbert, Director of Human Resources<br>
+        Mike, Vice President, Marketing<br>
+        Ferris, Founder and CEO </p>
+</body>
+</html>
